# hono-docs.ts
@@ -15,7 +15,7 @@ export default defineConfig({
     {
       name: 'General Routes',
       apiPrefix: '/', // This will be prepended to all `api` values below
-      appTypePath: 'src/routes/home.ts', // Path to your AppType export
+      appTypePath: 'src/routes/home-route.ts', // Path to your AppType export
       api: [
         {
           api: '/',
@@ -23,11 +23,37 @@ export default defineConfig({
           description: 'Get API home information',
           summary: 'API Home',
         },
+      ],
+    },
+    {
+      name: 'Health Routes',
+      apiPrefix: '/health', // This will be prepended to all `api` values below
+      appTypePath: 'src/routes/health-route.ts', // Path to your AppType export
+      api: [
         {
-          api: '/health',
+          api: '/',
           method: 'get',
-          description: 'Get health information',
-          summary: 'Health Check',
+          description: 'Get API health status',
+          summary: 'API Health',
+        },
+      ],
+    },
+    {
+      name: 'Docs Routes',
+      apiPrefix: '/docs', // This will be prepended to all `api` values below
+      appTypePath: 'src/routes/docs-route.ts', // Path to your AppType export
+      api: [
+        {
+          api: '/',
+          method: 'get',
+          description: 'Get API documentation',
+          summary: 'API Docs',
+        },
+        {
+          api: '/open-api',
+          method: 'get',
+          description: 'Get OpenAPI specification in JSON format',
+          summary: 'OpenAPI JSON',
         },
       ],
     },
