# src/routes/home-route.ts
@@ -1,10 +1,7 @@
-import { getApiHealth } from '@/controllers/health-controller'
 import { getWelcomeMessage } from '@/controllers/home-controller'
 import { Hono } from 'hono'
 
-const homeRoute = new Hono()
-  .get('/', getWelcomeMessage)
-  .get('/health', getApiHealth)
+const homeRoute = new Hono().get('/', getWelcomeMessage)
 
 export type AppType = typeof homeRoute
 export default homeRoute
